authorizeRequests