@@ -17,7 +17,6 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
 import java.util.Arrays;
-import java.util.List;
 
 @Configuration
 @EnableResourceServer
@@ -40,14 +39,11 @@ public class ResourceServerConfig extends ResourceServerConfigurerAdapter {
         if (Arrays.asList(env.getActiveProfiles()).contains("test")) {
             http.headers().frameOptions().disable();
         }
-
-        //no perfil prod liberei todos para ter acesso, não soube de outra forma.
-        http.authorizeRequests().anyRequest().permitAll();
-
-//        http.authorizeRequests()
-//                .antMatchers(PUBLIC).permitAll()
-//                .antMatchers(HttpMethod.POST, PUBLIC_USER_INSERT).permitAll()
-//                .anyRequest().authenticated();
+        
+        http.authorizeRequests()
+                .antMatchers(PUBLIC).permitAll()
+                .antMatchers(HttpMethod.POST, PUBLIC_USER_INSERT).permitAll()
+                .anyRequest().authenticated();
 
         http.cors().configurationSource(corsConfigurationSource());
     }
@@ -58,7 +54,7 @@ public class ResourceServerConfig extends ResourceServerConfigurerAdapter {
         String[] origins = corsOrigins.split(",");
 
         CorsConfiguration corsConfig = new CorsConfiguration();
-        corsConfig.setAllowedOriginPatterns(List.of("*"));
+        corsConfig.setAllowedOriginPatterns(Arrays.asList(origins));
         corsConfig.setAllowedMethods(Arrays.asList("POST", "GET", "PUT", "DELETE", "PATCH"));
         corsConfig.setAllowCredentials(true);
         corsConfig.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
